# proton-drive-client

./: .gitignore  Cargo.toml  DIARY.md  LICENSE  README.md
crates/proton-core/: Cargo.toml
crates/proton-core/src/: error.rs  keyring.rs  lib.rs
crates/proton-core/src/api/: client.rs  drive_types.rs  mod.rs  types.rs
crates/proton-core/src/auth/: mod.rs  password.rs  srp.rs
crates/proton-core/src/crypto/: mod.rs
crates/proton-core/src/drive/: keyring.rs  mod.rs
crates/proton-core/tests/: auth_integration.rs
crates/proton-drive/: Cargo.toml
crates/proton-drive/src/: main.rs
crates/protond/: Cargo.toml
crates/protond/src/: main.rs
