[package]
name    = "proton-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }

reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2     = "0.10"
bcrypt   = "0.15"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand     = "0.8"
base64   = "0.22"
keyring  = { version = "3", features = ["async-secret-service", "tokio", "crypto-rust"] }
zeroize  = { version = "1", features = ["derive"] }
