[package]
name    = "proton-drive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proton-drive"
path = "src/main.rs"

[dependencies]
proton-core = { path = "../proton-core" }
tokio       = { workspace = true }
anyhow      = { workspace = true }
clap        = { version = "4", features = ["derive"] }
rpassword   = "7"
